fix: 🐛 should work better on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #333333;
-  min-height: 110vh;
+  min-height: 120vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,4 +22,18 @@
 
 .App-link {
   color: #61dafb;
+}
+
+@media only screen and (orientation: portrait) {
+  .postImage {
+    width: 80%;
+    height: inherit;
+  }
+}
+
+@media only screen and (orientation: landscape) {
+  .postImage {
+    width: 720px;
+    height: 500px;
+  }
 }
